# ND_HomeServiceRobot

./: readme.md
add_markers/: CMakeLists.txt  package.xml
add_markers/src/: add_markers.cpp  add_markers2.cpp
add_markers/srv/: Inform.srv
gmapping/slam_gmapping/gmapping/src/: slam_gmapping.cpp
maps/: myworld2.world
pick_objects/: CMakeLists.txt  package.xml
pick_objects/src/: pick_objects.cpp
pick_objects/srv/: Switch.srv
rviz_Config/: myRviz.rviz
scripts/: add_markers.sh  home_service.sh  pick_objects.sh  test.sh  test_navigation.sh  test_slam.sh
turtlebot_interactions/turtlebot_rviz_launchers/rviz/: navigation.rviz
turtlebot_simulator/turtlebot_gazebo/env-hooks/: 25.turtlebot-gazebo.sh.em
turtlebot_simulator/turtlebot_gazebo/launch/: amcl_demo.launch  turtlebot_world.launch
turtlebot_simulator/turtlebot_gazebo/launch/includes/: myAMCL.xml
turtlebot_simulator/turtlebot_gazebo/maps/: myMMap.yaml
